// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Utils > Tauri API wrappers > tauriEmit > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriEmit > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > allCalls 1`] = `
[
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": false,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriEmit > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriEmit > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriEmit > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriEmit > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriEmit > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriEmit > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriEmit > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > allCalls 1`] = `
[
  [
    "invoke",
    {
      "calledWith": {
        "notes": [],
      },
      "name": "delete_notes",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {},
      "name": "get_all_notes",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > allCalls 1`] = `
[
  [
    "invoke",
    {
      "name": "delete_notes",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > allCalls 1`] = `
[
  [
    "invoke",
    {
      "name": "edit_note",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": {
        "kind": "error",
        "message": "Failed to edit note. Try again?",
        "title": "Edit note",
      },
      "name": "plugin:dialog|message",
    },
  ],
  [
    "invoke",
    {
      "name": "edit_note",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": {
        "kind": "error",
        "message": "Failed to edit note. Try again?",
        "title": "Edit note",
      },
      "name": "plugin:dialog|message",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriListen > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriListen > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriListen > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriListen > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriListen > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > capitalise > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > capitalise > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > capitalise > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > capitalise > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > capitalise > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > capitalise > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > capitalise > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > capitalise > allCalls 1`] = `[]`;

exports[`Utils > capitalise > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > capitalise > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > capitalise > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > capitalise > openedPopup 1`] = `undefined`;

exports[`Utils > capitalise > selectedTheme 1`] = `"System"`;

exports[`Utils > capitalise > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > capitalise > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > escapeRegex > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > escapeRegex > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > escapeRegex > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > escapeRegex > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > escapeRegex > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > escapeRegex > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > escapeRegex > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > escapeRegex > allCalls 1`] = `[]`;

exports[`Utils > escapeRegex > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > escapeRegex > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > escapeRegex > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > escapeRegex > openedPopup 1`] = `undefined`;

exports[`Utils > escapeRegex > selectedTheme 1`] = `"System"`;

exports[`Utils > escapeRegex > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > escapeRegex > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > hasKeys > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > hasKeys > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > hasKeys > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > hasKeys > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > hasKeys > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > hasKeys > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > hasKeys > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > hasKeys > allCalls 1`] = `[]`;

exports[`Utils > hasKeys > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > hasKeys > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > hasKeys > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > hasKeys > openedPopup 1`] = `undefined`;

exports[`Utils > hasKeys > selectedTheme 1`] = `"System"`;

exports[`Utils > hasKeys > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > hasKeys > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > isDev > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > isDev > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > isDev > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > isDev > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > isDev > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > isDev > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > isDev > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > isDev > allCalls 1`] = `[]`;

exports[`Utils > isDev > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > isDev > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > isDev > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > isDev > openedPopup 1`] = `undefined`;

exports[`Utils > isDev > selectedTheme 1`] = `"System"`;

exports[`Utils > isDev > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > isDev > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > isEmptyNote > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > isEmptyNote > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > isEmptyNote > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > isEmptyNote > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > isEmptyNote > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > isEmptyNote > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > isEmptyNote > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > isEmptyNote > allCalls 1`] = `[]`;

exports[`Utils > isEmptyNote > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > isEmptyNote > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > isEmptyNote > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > isEmptyNote > openedPopup 1`] = `undefined`;

exports[`Utils > isEmptyNote > selectedTheme 1`] = `"System"`;

exports[`Utils > isEmptyNote > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > isEmptyNote > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > isWhitespaceOnly > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > isWhitespaceOnly > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > allCalls 1`] = `[]`;

exports[`Utils > isWhitespaceOnly > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > isWhitespaceOnly > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > isWhitespaceOnly > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > isWhitespaceOnly > openedPopup 1`] = `undefined`;

exports[`Utils > isWhitespaceOnly > selectedTheme 1`] = `"System"`;

exports[`Utils > isWhitespaceOnly > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > isWhitespaceOnly > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > mathClamp > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > mathClamp > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > mathClamp > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > mathClamp > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > mathClamp > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > mathClamp > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > mathClamp > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > mathClamp > allCalls 1`] = `[]`;

exports[`Utils > mathClamp > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > mathClamp > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > mathClamp > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > mathClamp > openedPopup 1`] = `undefined`;

exports[`Utils > mathClamp > selectedTheme 1`] = `"System"`;

exports[`Utils > mathClamp > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > mathClamp > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > unixToDateTime > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > unixToDateTime > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > unixToDateTime > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > unixToDateTime > PersistentStorage.get('THEME') 1`] = `null`;

exports[`Utils > unixToDateTime > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > unixToDateTime > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > unixToDateTime > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`Utils > unixToDateTime > allCalls 1`] = `[]`;

exports[`Utils > unixToDateTime > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > unixToDateTime > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > unixToDateTime > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > unixToDateTime > openedPopup 1`] = `undefined`;

exports[`Utils > unixToDateTime > selectedTheme 1`] = `"System"`;

exports[`Utils > unixToDateTime > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > unixToDateTime > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
